--- a/makan/package.json
+++ b/makan/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "ajv": "^8.17.1",
+    "axios": "^1.7.2",
+    "jsonschema": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
