--- a/pipeline/Makefile
+++ b/pipeline/Makefile
@@ -12,5 +12,5 @@ deploy:
 		--runtime go121 \
 		--trigger-http \
 		--allow-unauthenticated \
-		--set-env-vars=GOOGLE_API_KEY=$(GOOGLE_API_KEY),GOOGLE_HOST=$(GOOGLE_HOST),WEATHER_API_KEY=$(WEATHER_API_KEY),WEATHER_HOST=$(WEATHER_HOST),DB_HOST=$(DB_HOST),DB_USERNAME=$(DB_USERNAME),DB_PASSWORD=$(DB_PASSWORD),DB_NAME=$(DB_NAME),DB_PORT=$(DB_PORT),DB_IS_PROD=true,DB_INSTANCE_CONNECTION_NAME=$(DB_INSTANCE_CONNECTION_NAME) \
+		--set-env-vars=GOOGLE_API_KEY=$(GOOGLE_API_KEY),GOOGLE_HOST=$(GOOGLE_HOST),WEATHER_API_KEY=$(WEATHER_API_KEY),WEATHER_HOST=$(WEATHER_HOST),DB_HOST=$(DB_HOST),DB_USERNAME=$(DB_USERNAME),DB_PASSWORD=$(DB_PASSWORD),DB_NAME=$(DB_NAME),DB_PORT=$(DB_PORT),DB_IS_PROD=true,DB_INSTANCE_CONNECTION_NAME=$(DB_INSTANCE_CONNECTION_NAME),OPENAI_HOST=$(OPENAI_HOST),OPENAI_API_KEY=$(OPENAI_API_KEY) \
 		--entry-point=BatchInsertRecommendations
